# tomboy

./: ChangeLog  Makefile.am  NEWS  README-WIN32  Tomboy.csproj  Tomboy.mdp  Tomboy.sln  build.bat  configure.in  tomboy.spec.in
Setup/: Setup.wxs
Tomboy/: .cvsignore  AbstractAddin.cs  ActionManager.cs  AddinManager.cs  Applet.cs  ApplicationAddin.cs  Defines.WIN32.cs  Defines.cs  FileSystemSyncServer.cs  GConfPreferencesClient.cs  GnomeApplication.cs  GtkApplication.cs  Keybinder.cs  Logger.cs  MacApplication.cs  Makefile.am  NativeApplication.cs  Note.cs  NoteAddin.cs  NoteBuffer.cs  NoteEditor.cs  NoteManager.cs  NoteTag.cs  NoteWindow.cs  PlatformFactory.cs  PluginManager.cs  Preferences.cs  PreferencesClient.cs  PreferencesDialog.cs  PrefsKeybinder.cs  RecentChanges.cs  RemoteControl.cs  Search.cs  Services.cs  SyncDialog.cs  SyncManager.cs  SyncServiceAddin.cs  SyncUtils.cs  Tag.cs  TagButton.cs  (+16 more)
Tomboy/Sharing.WebService/: Makefile.am  NoteFullInfo.cs  NoteInfo.cs  Tomboy.asmx  TomboyWebService.asmx.cs  TomboyWebService.wsdl
data/: Makefile.am  UIManagerLayout.xml  build.bat  konqueror.bat  tomboy.bat  tomboy.desktop.in  tomboy.schemas.in  tomboy.vbs
help/: ChangeLog  Makefile.am
libtomboy/: tomboyutil.c  tomboyutil.h
po/: ChangeLog  LINGUAS  POTFILES.in  ar.po  bg.po  bn_IN.po  ca@valencia.po  en_GB.po  et.po  eu.po  fi.po  fr.po  gl.po  hi.po  id.po  it.po  ja.po  ko.po  lv.po  nb.po  ne.po  pl.po  pt.po  pt_BR.po  sk.po  sl.po  sv.po  tr.po  vi.po  zh_CN.po
test/: NoteManagerTest.cs
win32/: .cvsignore  GConf_Stub.cs  Gnome.About_Stub.cs  build.bat  (+8 more)
(+82 files in other folders)
